--- a/busy.html
+++ b/busy.html
@@ -15,6 +15,8 @@
         drawRect(20,45,30,30);
         drawCircle(20,25,4);
         drawCircle(50,25,4);
+        
+        group.animateTo("x", 50, 200)
       }
       
       function drawCircle(x,y,rad) {
